--- a/SimpleCircuitOnline/Shared/TabMenu.razor.css
+++ b/SimpleCircuitOnline/Shared/TabMenu.razor.css
@@ -11,7 +11,7 @@
 div {
     padding: 0.5rem;
     height: 100%;
-    overflow: hidden;
+    overflow: visible;
     border-bottom-right-radius: 0.25rem;
     border-bottom-left-radius: 0.25rem;
     border: 1px solid #dee2e6;
